<resources>
    <string name="app_name">OneLookApp</string>
    <string name="tv_let_s_start">Let`s start</string>
    <string name="tv_just_take_a_look_and_take_action">Just take a look and take action!</string>
    <string name="tv_welcome_to_nonelook">Welcome to\nOneLook</string>
    <string name="tv_main_logo">Main logo</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="at_least_one_number_or_symbol">At least one number or symbol</string>
    <string name="both_uppercase_and_lowercase_characters">Both uppercase and lowercase characters</string>
    <string name="by_continuing_you_accept_our_privacy_policy_and_term_of_use">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="sing_up">Sing up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_e_mail_here">Enter your e-mail here</string>
    <string name="place_the_password_here">Place the password here</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or">Or</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome back</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Log in</string>
    <string name="keep_calm_and_stay_in_control">Keep calm and stay in control</string>
    <string name="you_can_check_your_health_with_just_one_look">You can check your health with just one look.</string>
    <string name="don_t_miss_a_single_pill_ever">Don’t miss a single pill, ever!</string>
    <string name="exercise_more_breathe_better"><![CDATA[Exercise more & breathe better]]></string>
    <string name="learn_measure_set_daily_goals">Learn, measure, set daily goals.</string>
    <string name="plan_your_supplementation_in_details">Plan your supplementation in details.</string>
    <string name="s_brpm">%s BrPM</string>
    <string name="breath_rate">Breath Rate</string>
</resources>