<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/tv_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/welcome_back"
        android:textColor="#0F2851"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="349dp"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/e_mail"
        android:textColor="#898D9E"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_back" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/email_ic_selector"
        android:drawablePadding="4dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans_medium"
        android:hint="@string/enter_your_e_mail_here"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mail" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="329dp"
        android:fontFamily="@font/noto_sans_medium"
        android:text="@string/password"
        android:textColor="#898D9E"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/lock_ic_selector"
        android:drawableEnd="@drawable/hidepass_ic_selector"
        android:drawablePadding="4dp"
        android:ems="10"
        android:fontFamily="@font/noto_sans_medium"
        android:hint="@string/place_the_password_here"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />


    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/noto_sans_medium"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="#5A5AF8"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="241dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_start"
        android:elevation="10dp"
        android:fontFamily="@font/noto_sans_medium"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_arrow_long_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

    <View
        android:id="@+id/view_or"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_separate"
        app:layout_constraintBottom_toTopOf="@+id/ib_fb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_in"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:padding="10dp"
        android:text="@string/or"
        android:textColor="@color/Deep_Blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_or"
        app:layout_constraintEnd_toEndOf="@+id/view_or"
        app:layout_constraintStart_toStartOf="@+id/view_or"
        app:layout_constraintTop_toTopOf="@+id/view_or" />

    <ImageButton
        android:id="@+id/ib_google"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="39dp"
        android:src="@drawable/ic_gl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ib_fb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_in"
        app:layout_constraintVertical_bias="0.666" />

    <ImageButton
        android:id="@+id/ib_fb"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="39dp"
        android:background="@null"
        android:src="@drawable/ic_fb"
        app:layout_constraintBottom_toBottomOf="@+id/ib_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ib_google"
        app:layout_constraintTop_toTopOf="@+id/ib_google"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_sing_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/noto_sans_medium"
        android:gravity="center"
        android:text="@string/sing_up"
        android:textColor="#5A5AF8"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_acc"

        app:layout_constraintTop_toBottomOf="@+id/ib_fb"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_medium"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_yet"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_log_in"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
